samples/_failures_safe/1761076836_43fafe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59385f4c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_59385f4c.c:158:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 |     MinHeap* heap
      |     ^~~~~~~
./samples/SAFE/__tmp_59385f4c.c:158:5: error: expected declaration or statement at end of input
